# Embedded-Linux-Service-Watchdog

./: CMakeLists.txt  README.md
scripts/: service_manager.sh
src/: main.c  monitor.c  policy.c
